[gd_scene load_steps=17 format=3 uid="uid://dlqn1f5rqqst5"]

[ext_resource type="PackedScene" uid="uid://buu1cm8antw4r" path="res://Scenes/Scene2_5/scenes/characters/character2.tscn" id="1_bwfpu"]
[ext_resource type="Texture2D" uid="uid://dk120emgcv7k" path="res://Scenes/Scene2_5/assets/art/characters/Boxer.png" id="2_p5nnk"]
[ext_resource type="Script" uid="uid://bi0s1nvpkwg7e" path="res://Scenes/Scene2_5/scenes/characters/boss_enemy.gd" id="2_q4wui"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q4wui"]
radius = 2.0
height = 15.0

[sub_resource type="Animation" id="Animation_q4wui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamageEmitter:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}

[sub_resource type="Animation" id="Animation_6qixw"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DamageEmitter:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}

[sub_resource type="Animation" id="Animation_e7d3t"]
resource_name = "attack_complete"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [25.0]
}

[sub_resource type="Animation" id="Animation_eyg20"]
resource_name = "beaten"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_nani1"]
resource_name = "fly"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"on_fly_started"
}, {
"args": [],
"method": &"on_fly_complete"
}]
}

[sub_resource type="Animation" id="Animation_wtmb8"]
resource_name = "hurt"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"on_action_complete"
}]
}

[sub_resource type="Animation" id="Animation_p5nnk"]
resource_name = "idle"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_f8too"]
resource_name = "stunned"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_gv4op"]
resource_name = "walk"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [25.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gv4op"]
_data = {
&"RESET": SubResource("Animation_q4wui"),
&"attack": SubResource("Animation_6qixw"),
&"attack_complete": SubResource("Animation_e7d3t"),
&"beaten": SubResource("Animation_eyg20"),
&"fly": SubResource("Animation_nani1"),
&"hurt": SubResource("Animation_wtmb8"),
&"idle": SubResource("Animation_p5nnk"),
&"stunned": SubResource("Animation_f8too"),
&"walk": SubResource("Animation_gv4op")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4wui"]
size = Vector2(25, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gv4op"]
size = Vector2(33, 30.5)

[node name="BossEnemy" groups=["boss_enemy"] instance=ExtResource("1_bwfpu")]
collision_layer = 4
collision_mask = 13
script = ExtResource("2_q4wui")
damage = 8.0
health = 120.0
flight_speed = 100.0
jump_intensity = 250.0
speed = 100.0

[node name="CharacterSprite" parent="." index="1"]
scale = Vector2(0.727316, 0.724042)
texture = ExtResource("2_p5nnk")
centered = false
offset = Vector2(-100, -228)
hframes = 3
vframes = 2
frame = 1

[node name="CollisionShape2D" parent="." index="2"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q4wui")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_gv4op")
}
autoplay = "idle"

[node name="DamageEmitter" parent="." index="4"]
collision_mask = 16
monitoring = true

[node name="CollisionShape2D" parent="DamageEmitter" index="0"]
position = Vector2(36, -65)
shape = SubResource("RectangleShape2D_q4wui")

[node name="DamageReceiver" parent="." index="5"]
position = Vector2(0, -1)
collision_layer = 32

[node name="CollisionShape2D" parent="DamageReceiver" index="0"]
position = Vector2(0, -69)
shape = SubResource("RectangleShape2D_gv4op")

[node name="AttackTimer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="StunTimer" type="Timer" parent="." index="7"]
wait_time = 7.0

[node name="Aim" type="RayCast2D" parent="." index="8"]
target_position = Vector2(112, 0)
collision_mask = 2

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]

[editable path="DamageEmitter"]
[editable path="DamageReceiver"]
